# visturing

./: 404.html  README.md  index.html  objects.inv  pyproject.toml
Benchmarks/: evaluate_piq.py  evaluate_resnet.py  evaluate_tid.py  evaluate_vision_models.py  run_all_benchmarks.sh
Benchmarks/results/: piq_fsim_correlations.csv  piq_gmsd_correlations.csv  piq_haarpsi_correlations.csv  piq_information_weighted_ssim_correlations.csv  piq_mdsi_correlations.csv  piq_multi_scale_gmsd_correlations.csv  piq_multi_scale_ssim_correlations.csv  piq_psnr_correlations.csv  piq_srsim_correlations.csv  piq_ssim_correlations.csv  piq_vif_p_correlations.csv  piq_vsi_correlations.csv  resnet18_avgpool_correlations.csv  resnet18_curve_order_summary.csv  resnet18_fc_correlations.csv  resnet18_layer1_correlations.csv  resnet18_layer2_correlations.csv  resnet18_layer3_correlations.csv  resnet18_layer4_correlations.csv  resnet18_rmse_fit_summary.csv  resnet18_summary.md  resnet18_tid2008_correlations.csv  resnet18_tid2013_correlations.csv  tid_summary.md
Diff_PNet/: README.md
Diff_PNet/non_weighted/: optimize_prop1.py  optimize_prop10.py  optimize_prop2.py  optimize_prop3_4.py  optimize_prop5.py  optimize_prop6_7.py  optimize_prop8.py  optimize_prop9.py
Diff_PNet/weighted/: optimize_prop1.py  optimize_prop10.py  optimize_prop2.py  optimize_prop3_4.py  optimize_prop5.py  optimize_prop6_7.py  optimize_prop8.py  optimize_prop9.py
Diff_PNet_Init/non_weighted/: a_star_gdn_cs.npy  optimize_prop1.py  optimize_prop10.py  optimize_prop2.py  optimize_prop3_4.py  optimize_prop5.py  optimize_prop6_7.py  optimize_prop8.py  optimize_prop9.py  utils.py
Diff_PNet_Init/weighted/: a_star_gdn_control.npy  initialization.py  model.py  optimize_prop1.py  optimize_prop10.py  optimize_prop2.py  optimize_prop3_4.py  optimize_prop5.py  optimize_prop6_7.py  optimize_prop8.py  optimize_prop9.py
Experiments/: test_model.sh
Experiments/Experiment_1/: baseline_pnet_final.py  param_pnet_final.py  param_pnet_final_split.py
Experiments/Experiment_10/: baseline_pnet_final.py  (+1 more)
Experiments_Paper/: convert_all.sh  create_scripts.sh  test_baseline_model.sh
NA_Experiments/: prop3_4.py  prop5.py
PNetP/: a_star_gdn_v1.npy  all.py  initialization.py  load_model.py  old34.py  prop1.py  prop10.py  prop2.py  prop34.py  prop5.py  prop67.py  prop8.py  prop9.py
api/: index.html
search/: search_index.json
use_examples/: visturing_evaluate_all_NLPD.ipynb  visturing_evaluate_all_PIQ_DISTS.ipynb  visturing_evaluate_all_PIQ_LPIPS.ipynb  visturing_evaluate_all_PerceptNet.ipynb  visturing_evaluate_all_RMSE.ipynb
visturing/: ranking.py
(+121 files in other folders)
