[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["visturing*"]

[tool.setuptools.package-data]
"visturing.properties" = ["*.mat"]

[tool.uv.sources]
paramperceptnet = { git = "https://github.com/Jorgvt/paramperceptnet.git" }

[project]
name = "visturing"
version = "0.1.0"
authors = [
  { name="Jorge Vila Tomás", email="jorge.vila-tomas@uv.es" },
]
description = "A collection of visual Turing tests and experiments."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# dependencies = [
#     "numpy",
#     "scipy",
#     "tensorflow",
#     "matplotlib",
#     "torch",
#     "pandas",
#     "tensorflow-probability",
#     "perceptualtests",
#     "h5py",
# ]
#

dependencies = [
  "opencv-python",
  "natsort",
  "wget",
  "matplotlib",
  "scipy",
  "pandas",
  "perceptualtests>=0.1.4",
]

[project.urls]
"Homepage" = "https://github.com/jorgvt/visturing"
"Bug Tracker" = "https://github.com/jorgvt/visturing/issues"

[dependency-groups]
dev = [
    "datasets>=4.8.5",
    "huggingface-hub>=1.17.0",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "paramperceptnet",
    "plotly>=6.7.0",
    "pytest>=8.3.5",
]
jax = [
    "flax",
    "jax",
]
